update index page with speakeazy links and update speakeazy page

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" style="background:url(img/speakeazyMC.gif) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="work/speakeazy.html" style="background:url(img/speakeazyMC.gif) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Empowering Communication for Meetings</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb">Speakeazy (Work in Progress!)</a>
+              <a class="link white bb" href="work/speakeazy.html">Speakeazy (Work in Progress!)</a>
             </h3>
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
