--- a/work/speakeazy.html
+++ b/work/speakeazy.html
@@ -24,28 +24,28 @@
   <div class="cf ph3 ph5-ns pv5">
   <div class="show-first fn fl-ns w-30-l w-50-ns pr4-ns">
     <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-      Acaia — The Makings of a Coffee Master
+      Speakeazy — Empowering Communication for Meetings
     </h1>
     <h2 class="f3 mid-gray lh-title">
-      How might Acaia app users become masters of brewing pourovers without adding stress to their morning routine?
+      How might meetings empower audience members to speak up and engage in a dialogue with the presenter?
     </h2>
     <time class="f6 ttu tracked gray">2018</time>
   </div>
   <div class="show-second fn fl-ns w-70-l w-50-ns mb5">
     <div class="w-two-thirds-l pr4-l">
       <div class="fs4 f4 f1-ns measure-narrow mv4 mt0-ns"><div class="aspect-ratio aspect-ratio--6x4">
-        <span style="background-image:url(../img/brewclue.jpg);" class="cover bg-center aspect-ratio--object"></span>
+        <span style="background-image:url(../img/se-hand.jpg);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
     </div>
     <p class="f3 fw7 lh-copy measure mt0-ns">
       I'm still working on this writeup, but I'm more than happy to share what I did and my process!
     </p>
     <p class="f5 lh-copy measure">
-      This was a project aimed at redesigning the current mobile application built for the <a class="link dim gray" href="https://acaia.co/">Acaia</a> scale. I designed the new application not only with better a UX in mind, but in designing how the app could be better suited for novice coffee makers and helping them master the craft of making pourovers.
+      This was a month long design and development product built for iOS, Android, and Web. I worked on the iOS team as a designer alongside several developers.
     </p>
     <div class="w-two-thirds-l pr4-l">
-      <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--6x4">
-        <span style="background-image:url(../img/empathy.gif);" class="cover bg-center aspect-ratio--object"></span>
+      <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--16x9">
+        <span style="background-image:url(../img/SEuserflow.jpg);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
     </div>
   </div>
