remove gif from acaia page

--- a/work/speakeazy.html
+++ b/work/speakeazy.html
@@ -34,14 +34,14 @@
   <div class="show-second fn fl-ns w-70-l w-50-ns mb5">
     <div class="w-two-thirds-l pr4-l">
       <div class="fs4 f4 f1-ns measure-narrow mv4 mt0-ns"><div class="aspect-ratio aspect-ratio--6x4">
-        <span style="background-image:url(../img/se-hand.jpg);" class="cover bg-center aspect-ratio--object"></span>
+        <span style="background-image:url(../img/SE-hand.jpg);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
     </div>
     <p class="f3 fw7 lh-copy measure mt0-ns">
       I'm still working on this writeup, but I'm more than happy to share what I did and my process!
     </p>
     <p class="f5 lh-copy measure">
-      This was a month long design and development product built for iOS, Android, and Web. I worked on the iOS team as a designer alongside several developers.
+      This was a month long design and development product built for iOS, Android, and Web. I worked on the iOS team as a designer alongside several developers and contributed largely to audience user stories in UX and visual design.
     </p>
     <div class="w-two-thirds-l pr4-l">
       <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--16x9">
