add animation to Introduction header on Loree page

--- a/work/speakeazy.html
+++ b/work/speakeazy.html
@@ -41,7 +41,10 @@
       I'm still working on this writeup, but I'm more than happy to share what I did and my process!
     </p>
     <p class="f5 lh-copy measure">
-      This was a month long design and development product built for iOS, Android, and Web. I worked on the iOS team as a designer alongside several developers and contributed largely to audience user stories in UX and visual design.
+      Speakeazy is an app designed for meetings to allow for open, real-time communication between audience and presenter and also gather quantifiable results.
+    </p>
+    <p class="f5 lh-copy measure">
+      This was a design and development product built over the course of a month for iOS, Android, and Web. I worked on the iOS team as a designer alongside several developers and contributed largely to overall product strategy and audience user stories in UX and visual design.
     </p>
     <div class="w-two-thirds-l pr4-l">
       <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--16x9">
