--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="aspect-ratio aspect-ratio--8x5 dim">
               <a class="br4 db aspect-ratio--object cover" href="work/medialets.html" style="background:url(img/medialets.jpg) no-repeat center center"></a>
             </div>
-            <p class="mt3 mb0 f6 light-blue">Data-Inspired User Experience</p>
+            <p class="mt3 mb0 f6 light-blue">Data Inspired User Experience</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
               <a class="link white bb" href="work/medialets.html">Servo</a>
             </h3>
