--- a/work/loree.html
+++ b/work/loree.html
@@ -31,6 +31,7 @@
       </h2>
       <div class="w-30 w-50-ns"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-shortlist.png"></img></a></div>
       <div class="w-30 w-50-ns mt2"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-peopleschoice.png"></img></a></div>
+      <time class="f6 ttu tracked gray">2017</time>
     </div>
     <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns">
       <div class="w-two-thirds-l mb4-ns">
@@ -46,7 +47,7 @@
         Loree is an Artificially Intelligent companion that incorporates language through conversation and storytelling to introduce cultural concepts to children in immigrant families. As children grow older and their speech patterns become more complex, Loree helps expand their understanding of abstract concepts and ensures that parents are taking an active role in this learning process.
       </p>
     </div>
-    <div class="fn fl-ns w-20-l w-50-ns pr4-ns">
+    <div class="show-second fn fl-ns w-20-l w-50-ns pr4-ns">
       <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
         Introduction
       </h1>
