change titles on index and also add back link to pages

--- a/work/about.html
+++ b/work/about.html
@@ -24,7 +24,7 @@
   <main class="cf pa3 pa4-m pa5-l mw9 center">
     <div class="fr w-100 w-80-l">
       <a class="f6 link white no-underline" href="../index.html">
-        ← back
+        ← BACK
       </a>
       <h1 class="show-first f2 f1-l lh-title mt0 mb0">
         Hello,
