--- a/work/illustrations.html
+++ b/work/illustrations.html
@@ -22,10 +22,12 @@
 <body class="sans-serif bg-black near-white">
   <main>
     <article class="cf pa3 mw9 center">
-      <header class="show-first fl w-100 w-50-l pa3-m pa4-l mb2 mb3-l">
-        <a class="f6 link white no-underline" href="../index.html">
-          ← back
-        </a>
+      <header class="show-first fl w-100 w-50-l pa3-m pa4-l mb4 mb1-l">
+        <div class="w-100">
+          <a class="show-first f6 link white no-underline" href="../index.html">
+            ← BACK
+          </a>
+        </div>
       </header>
       <section class="show-second fl w-100">
         <div class="fl w-100 w-100-m w-50-l pv3 pa3-m pa4-l">
