--- a/work/medialets.html
+++ b/work/medialets.html
@@ -24,7 +24,7 @@
   <main>
     <article class="pa4">
       <a class="show-first f6 link white no-underline measure center" href="../index.html">
-        ← back
+        ← BACK
       </a>
       <h2 class="show-first pb3 gray fs4 f4 f1-ns bb measure-narrow center">Data-Inspired User Experience</h2>
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
