--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <p class="mt3 mb0 f6 light-blue">Empowering Communication for Meetings</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="work/speakeazy.html">Speakeazy (Work in Progress!)</a>
+              <a class="link white bb" href="work/speakeazy.html">Speakeazy</a>
             </h3>
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
