--- a/work/photography.html
+++ b/work/photography.html
@@ -24,9 +24,11 @@
   <main>
     <article class="cf pa3 mw9 center">
       <header class="show-first fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
-        <a class="f6 link white no-underline" href="../index.html">
-          ← back
-        </a>
+        <div class="w-100 mb4">
+          <a class="show-first f6 link white no-underline" href="../index.html">
+            ← BACK
+          </a>
+        </div>
         <h2 class="lh-title f3 b mt0">
           Degas says to his friend Mallarmé, “You know, I’ve got a lot of good ideas for poems, but the poems are never very good.”
           Mallarmé says, “Of course, you don’t make poems out of ideas, you make poems out of words.
