--- a/work/loree.html
+++ b/work/loree.html
@@ -34,9 +34,9 @@
       <h2 class="f3 mid-gray lh-title">
         How might Voice UI's be used as tools for learning and celebrating the values of our diverse cultures?
       </h2>
-      <div class="w-30 w-50-ns"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-shortlist.png"></img></a></div>
-      <div class="w-30 w-50-ns mt2"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-peopleschoice.png"></img></a></div>
       <time class="f6 ttu tracked gray">2017</time>
+      <div class="w-30 w-50-ns mv2"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-shortlist.png"></img></a></div>
+      <div class="w-30 w-50-ns"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-peopleschoice.png"></img></a></div>
     </div>
     <div class="show-second fn fl-ns w-80-l w-50-m mt3 mt0-ns">
       <div class="w-two-thirds-l mb4-ns">
