--- a/work/medialets2.html
+++ b/work/medialets2.html
@@ -32,18 +32,18 @@
         Medialets — Data Inspired User Experience
       </h1>
       <h2 class="f3 mid-gray lh-title">
-        How I designed the Report Builder and Alerts features for the Servo platform.
+        Designing the Report Builder and Alerts features for the Servo platform.
       </h2>
-      <div class="w-third pr4-l">
-        <div class="fs4 f4 f1-ns measure-narrow mv4 mt0-ns"><div class="aspect-ratio aspect-ratio--1x1">
-          <span style="background-image:url(../img/servo.png);" class="cover bg-center aspect-ratio--object"></span>
-        </div></div>
-      </div>
       <time class="f6 ttu tracked gray">2016</time>
     </div>
     <div class="show-second fn fl-ns w-70-l w-50-ns mb5">
+      <div class="w-two-thirds-l pr4-l">
+        <div class="fs4 f4 f1-ns measure-narrow mv4 mt0-ns"><div class="aspect-ratio aspect-ratio--16x9">
+          <span style="background-image:url(../img/servoimage.jpg);" class="cover bg-center aspect-ratio--object"></span>
+        </div></div>
+      </div>
       <p class="f5 lh-copy measure mt0">
-        Medialets is a recently acquired GroupM company focused on innovation in mobile ad serving and measurement.
+        Medialets (acquired by GroupM) focused on innovation in mobile ad serving and measurement.
       </p>
       <p class="f5 bb lh-copy measure">
         My work on the Servo platform was in:
@@ -57,11 +57,19 @@
       <p class="f5 lh-copy measure">
         Designing a new Alerts notification panel for the platform from the ground up.
       </p>
-      <div class="w-two-thirds-l pr4-l">
-        <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--16x9">
-          <span style="background-image:url(../img/SEuserflow.jpg);" class="cover bg-center aspect-ratio--object"></span>
-        </div></div>
-      </div>
+    </div>
+    <div class="show-second fn fl-ns w-30-l w-50-ns pr4-ns">
+      <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+        Understand
+      </h1>
+      <h2 class="f3 mid-gray lh-title">
+        How I designed the Report Builder and Alerts features for the Servo platform.
+      </h2>
+    </div>
+    <div class="show-second fn fl-ns w-70-l w-50-ns mb5">
+      <p class="f5 lh-copy measure mt0">
+        Medialets is a recently acquired GroupM company focused on innovation in mobile ad serving and measurement.
+      </p>
     </div>
 
 
