--- a/work/speakeazy.html
+++ b/work/speakeazy.html
@@ -56,6 +56,11 @@
         <span style="background-image:url(../img/SEuserflow.jpg);" class="cover bg-center aspect-ratio--object"></span>
       </div></div>
     </div>
+    <div class="w-two-thirds-l pr4-l">
+      <div class="fs4 f4 f1-ns measure-narrow mv4-ns"><div class="aspect-ratio aspect-ratio--16x9">
+        <span style="background-image:url(../img/ask.gif);" class="cover bg-center aspect-ratio--object"></span>
+      </div></div>
+    </div>
   </div>
   </article>
   <script src="../js/main.js"></script>
