updating job on about

--- a/work/about.html
+++ b/work/about.html
@@ -47,8 +47,9 @@
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
-          Currently @ <a class="link white bb" href="http://www.intrepid.io/">Intrepid</a>
-          <br class="dn db-l">Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a>
+          Currently @ <a class="link white bb" href="http://www.wayfair.com/">Wayfair</a>
+          <br class="dn db-l">Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a>,
+          <a class="link white bb" href="http://www.intrepid.io/">Intrepid</a>
         </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
