--- a/work/loree.html
+++ b/work/loree.html
@@ -35,8 +35,8 @@
         How might Voice UI's be used as tools for learning and celebrating the values of our diverse cultures?
       </h2>
       <time class="f6 ttu tracked gray">2017</time>
-      <div class="w-30 w-50-ns mv2"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-shortlist.png"></img></a></div>
-      <div class="w-30 w-50-ns"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-peopleschoice.png"></img></a></div>
+      <div class="w-30 w-50-ns mb2"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-shortlist.png"></img></a></div>
+      <div class="w-30 w-50-ns mb2"><a class="" href="http://awards.ixda.org/entry/2018/loree/"><img src="../img/2018-interaction-peopleschoice.png"></img></a></div>
       <div class="w-30 w-50-ns"><a class="" href="https://www.fastcompany.com/innovation-by-design/2017/category/students"><img src="../img/IBD.jpg"></img></a></div>
 
     </div>
