--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:site_name" content="Jason Kim" />
   <meta property="og:image" content="http://jasonkim.xyz/img/jason.png" />
 
-  <!-- Twitter summary card -->
+  <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
   <meta name="twitter:title" content="Jason Kim" />
@@ -48,6 +48,7 @@
        </div>
        <ul class="show-second w-70-l fl-l list ph3 f4-ns mv3">
          <li class="dib mr3"><a class="link bb dim white" href="work/about.html">about</a></li>
+         <li class="dib mr3"><a class="link bb dim white" href="img/Jason-Kim_RESUME.pdf">resume</a></li>
          <li class="dib mr3"><a class="link bb dim white" href="#contact">contact</a></li>
        </ul>
    </div>
