--- a/work/about.html
+++ b/work/about.html
@@ -36,7 +36,7 @@
     <div class="f6 lh-copy fl w-100 mb4">
       <div class="show-fourth fl-ns w-100 w-20-l pr3-m pr5-l">
         <p class="mb0">
-          NYC based<br class="dn db-l"> Product & UX Designer
+          Boston based<br class="dn db-l"> Product & UX Designer
         </p>
         <a class="link bb white" href="../img/Jason-Kim_RESUME.pdf" target="_blank">resume</a>
       </div>
