change file name for main index file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jason Kim</title>
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
+  <link rel="stylesheet" href="css/tachyons.css"/>
   <link rel="stylesheet" href="css/custom.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon.png?v=2">
   <link rel="icon" type="image/png" href="favicons/favicon-32x32.png?v=2" sizes="32x32">
   <link rel="icon" type="image/png" href="favicons/favicon-16x16.png?v=2" sizes="16x16">
@@ -24,7 +25,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
   <meta name="twitter:title" content="Jason Kim" />
-  <meta name="twitter:description" content="Trying to make products more thoughtful, one honest conversation at a time ❤️" />
+  <meta name="twitter:description" content="Building thoughtful products,</br>one honest conversation at a time. ❤️"/>
   <meta name="twitter:image" content="http://jasonkim.xyz/img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
@@ -38,138 +39,32 @@
 
 </head>
 <body class="sans-serif bg-black near-white pt5-ns pt4">
-  <div class="mw8 center cf z-1 relative">
-       <div class="w-30-l fl-l tr-l ph3">
-           <h1 class="show-first f2 fw7 mb0 mt1 pv2 pr6">
-               <a class="white no-underline" href="/">
-                   kim.json
-               </a>
-           </h1>
-       </div>
-       <ul class="show-second w-70-l fl-l list ph3 f4-ns mv3">
-         <li class="dib mr3"><a class="link bb dim white" href="work/about.html">about</a></li>
-         <li class="dib mr3"><a class="link bb dim white" href="img/Jason-Kim_RESUME.pdf">resume</a></li>
-         <li class="dib mr3"><a class="link bb dim white" href="#contact">contact</a></li>
-       </ul>
-   </div>
-   <div class="show-first pb6-l pt4-l ph4 pb2 pt2 overflow-hidden text-banner">
-     <div id="banner" class="f-headliner-ns f-headliner nowrap fw7 relative">jason jason jason jason jason</div>
-   </div>
-    <div class="mw8 center">
-    <main class="cf relative z-1">
-      <div class="cf ph3-l pt0-l pt3 pb5-ns pb3">
-        <section class="fr w-100 w-100-m w-70-l cf ph3">
-          <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product Designer</p>
-          <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make products more thoughtful,</p>
-          <p class="show-second mt0 f4-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
-          <p class="show-third mt0 f4-l f4-ns f5 lh-copy light-silver">
-            <a class="link light-blue hover-blue bb" href="work/about.html">But who the heck is Jason Kim?</a>
-          </p>
-        </section>
+    <main class="mw8 center relative">
+      <div class="cf mt5-l pt1-ns pt0">
+          <div class="show-second w-30 fl ph3-l">
+              <p class="gray mt0 f3-ns fw5 lh-title-ns lh-copy ph3">kim.json</p>
+          </div>
+          <div class="show-second w-70 fl tr ph3-l">
+              <a href="http://jasonkim.xyz/img/Jason-Kim_RESUME.pdf" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">RESUME ↗</a>
+          </div>
       </div>
-      <div class="cf ph3-l pv5-ns pv3">
-        <section class="show-second w-30-l fl-l ph3">
-          <h2 class="fw7 f3-l f3-ns f4 lh-title mt0 light-silver">Work 📚</h2>
-        </section>
-        <section class="show-second cf ph2 ph0-l w-70-l fr-l mb3">
-          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
-            <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/loree.html" style="background:url(img/loree.gif) no-repeat center center"></a>
-            </div>
-            <p class="mt3 mb0 f6 light-blue">Voice UI for Language and Culture</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="work/loree.html">Loree</a>
-            </h3>
-          </article>
-          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
-            <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/acaia.html" style="background:url(img/acaia.jpg) no-repeat center center"></a>
-            </div>
-            <p class="mt3 mb0 f6 light-blue">The Makings of a Coffee Master</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="work/acaia.html">Acaia</a>
-            </h3>
-          </article>
-          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
-            <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/speakeazy.html" style="background:url(img/speakeazyMC.gif) no-repeat center center"></a>
-            </div>
-            <p class="mt3 mb0 f6 light-blue">Empowering Communication for Meetings</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="work/speakeazy.html">Speakeazy</a>
-            </h3>
-          </article>
-          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
-            <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/medialets.html" style="background:url(img/medialets.jpg) no-repeat center center"></a>
-            </div>
-            <p class="mt3 mb0 f6 light-blue">Data Inspired User Experience</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="work/medialets.html">Servo</a>
-            </h3>
-          </article>
-          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
-            <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/illustrations.html" style="background:url(img/illustrations.jpg) no-repeat center center"></a>
-            </div>
-            <p class="mt3 mb0 f6 light-blue">I'm a fool for a pen tool</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="work/illustrations.html">Illustrations</a>
-            </h3>
-          </article>
-          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
-            <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/photography.html" style="background:url(img/tiger.jpg) no-repeat center center"></a>
-            </div>
-            <p class="mt3 mb0 f6 light-blue">*click* *click*</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="work/photography.html">Photography</a>
-            </h3>
-          </article>
-        </section>
+      <div class="pv6-l pv5 ph3-l">
+          <h1 class="show-first mt0 mb2 f1-l f3 fw5 lh-title-ns lh-copy ph3">Product Design at Wayfair —</h1>
+          <h1 class="show-first mt0 mb2 f1-l f3 fw2 lh-title-ns lh-copy ph3">Building thoughtful products, one honest conversation at a time.</h1>
       </div>
-      <div id="contact" class="show-second mt0 cf ph3-l pt0 pb5">
-        <div class="w-30-l fl-l ph3">
-          <h2 class="pv3 fw7 f3-l f3-ns f4 lh-title mt0 light-silver">Say Hi</h2>
-          <h2 class="pv0 mv0" id="wavehi">👋</h2>
-        </div>
-        <div class="w-70-l fr-l">
-          <div class="flex flex-wrap f3 fw5 lh-title">
-            <div class="w-50 ph3">
-              <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-red no-underline" href="mailto:jajasonkim@gmail.com">email</a>
-              </div>
-            </div>
-            <div class="w-50 ph3">
-              <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-purple no-underline" href="https://www.linkedin.com/in/miknosaj/">linkedin</a>
-              </div>
-            </div>
-            <div class="w-50 ph3">
-              <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-blue no-underline" href="https://twitter.com/miknosaj">twitter</a>
-              </div>
-            </div>
-            <div class="w-50 ph3">
-              <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-yellow no-underline" href="https://instagram.com/kim.json">instagram</a>
-              </div>
-            </div>
-            <div class="w-50 ph3">
-              <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-green no-underline" href="https://medium.com/@kim.json">medium</a>
-              </div>
-            </div>
-            <div class="w-50 ph3">
-              <div class="pv3 bb b--white-50">
-                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-pink no-underline" href="https://dribbble.com/miknosaj">dribbble</a>
-              </div>
+      <div class="cf pl3-l pt1-ns pb3-ns pt0">
+          <div class="show-second w-20 fl ph3">
+            <div class="w-10-ns">
+              <h2 class="pv0 mv0" id="wavehi">👋</h2>
             </div>
           </div>
-        </div>
+          <div class="show-second w-80 fl tr ph3-l">
+              <a href="https://instagram.com/kim.json" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">IG ↗</a>
+              <a href="https://twitter.com/miknosaj" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">TWTR ↗</a>
+              <a href="https://twitter.com/miknosaj" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">LNKDN ↗</a>
+          </div>
       </div>
-    </main>
-  </div>
+      </main>
   <script src="js/main.js"></script>
 </body>
 </html>
