edit copy and links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
       </div>
       <div class="pv6-l pv5 ph3-l">
-          <h1 class="show-first mt0 mb2 f1-l f3 fw5 lh-title-ns lh-copy ph3">Product Design at Wayfair —</h1>
+          <h1 class="show-first mt0 mb2 f1-l f3 fw5 lh-title-ns lh-copy ph3">Product Designer at Wayfair —</h1>
           <h1 class="show-first mt0 mb2 f1-l f3 fw2 lh-title-ns lh-copy ph3">Building thoughtful products, one honest conversation at a time.</h1>
       </div>
       <div class="cf pl3-l pt1-ns pb3-ns pt0">
@@ -61,7 +61,7 @@
           <div class="show-second w-80 fl tr ph3-l">
               <a href="https://instagram.com/kim.json" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">IG ↗</a>
               <a href="https://twitter.com/miknosaj" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">TWTR ↗</a>
-              <a href="https://twitter.com/miknosaj" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">LNKDN ↗</a>
+              <a href="https://www.linkedin.com/in/miknosaj/" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">LNKDN ↗</a>
           </div>
       </div>
       </main>
