--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@miknosaj" />
   <meta name="twitter:title" content="Jason Kim" />
-  <meta name="twitter:description" content="Building thoughtful products,</br>one honest conversation at a time. ❤️"/>
+  <meta name="twitter:description" content="Building thoughtful products, one honest conversation at a time. ❤️"/>
   <meta name="twitter:image" content="http://jasonkim.xyz/img/jason.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
@@ -41,24 +41,24 @@
 <body class="sans-serif bg-black near-white pt5-ns pt4">
     <main class="mw8 center relative">
       <div class="cf mt5-l pt1-ns pt0">
-          <div class="show-second w-30 fl ph3-l">
-              <p class="gray mt0 f3-ns fw5 lh-title-ns lh-copy ph3">kim.json</p>
+          <div class="show-first w-30 fl ph3-l">
+              <p class="gray mt0 f3-ns fw5 lh-title-ns lh-copy ph3">JASON KIM</p>
           </div>
-          <div class="show-second w-70 fl tr ph3-l">
+          <div class="show-first w-70 fl tr ph3-l">
               <a href="http://jasonkim.xyz/img/Jason-Kim_RESUME.pdf" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">RESUME ↗</a>
           </div>
       </div>
       <div class="pv6-l pv5 ph3-l">
-          <h1 class="show-first mt0 mb2 f1-l f3 fw5 lh-title-ns lh-copy ph3">Product Designer at Wayfair —</h1>
-          <h1 class="show-first mt0 mb2 f1-l f3 fw2 lh-title-ns lh-copy ph3">Building thoughtful products, one honest conversation at a time.</h1>
+          <h1 class="show-second mt0 mb2 f1-l f3 fw5 lh-title-ns lh-copy ph3">Product Designer at Wayfair</h1>
+          <h1 class="show-second mt0 mb2 f1-l f3 fw2 lh-title-ns lh-copy ph3">Building thoughtful products, one honest conversation at a time.</h1>
       </div>
       <div class="cf pl3-l pt1-ns pb3-ns pt0">
-          <div class="show-second w-20 fl ph3">
+          <div class="show-third w-20 fl ph3">
             <div class="w-10-ns">
               <h2 class="pv0 mv0" id="wavehi">👋</h2>
             </div>
           </div>
-          <div class="show-second w-80 fl tr ph3-l">
+          <div class="show-third w-80 fl tr ph3-l">
               <a href="https://instagram.com/kim.json" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">IG ↗</a>
               <a href="https://twitter.com/miknosaj" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">TWTR ↗</a>
               <a href="https://www.linkedin.com/in/miknosaj/" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">LNKDN ↗</a>
