Adding link to notion

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           </div>
           <div class="show-first w-60 fl tr ph3-l">
               <a href="http://jasonkim.xyz/img/Jason-Kim_RESUME.pdf" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">RESUME ↗</a>
+              <a href="https://www.notion.so/08195c7e725b4b41b7dd5720907c914b?v=a5d798a4c5944696ae17c01871f8e935" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">WORK ↗</a>
           </div>
       </div>
       <div class="pv6-l pv5 ph3-l">
