updating with HYPR stuff

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
           </div>
           <div class="show-first w-60 fl tr ph3-l">
               <a href="http://jasonkim.xyz/img/Jason-Kim_RESUME.pdf" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">RESUME ↗</a>
-              <a href="https://www.notion.so/08195c7e725b4b41b7dd5720907c914b?v=a5d798a4c5944696ae17c01871f8e935" class="link no-underline gray hover-white mt0 f3-ns fw5 lh-title-ns lh-copy ph3">WORK ↗</a>
           </div>
       </div>
       <div class="pv6-l pv5 ph3-l">
-          <h1 class="show-second mt0 mb2 f1-l f3 fw5 lh-title-ns lh-copy ph3">Product Designer at Wayfair</h1>
+          <h1 class="show-second mt0 mb2 f1-l f3 fw5 lh-title-ns lh-copy ph3">Product Designer at <a class="white" href="https://www.hypr.com/">HYPR</a></h1>
           <h1 class="show-second mt0 mb2 f1-l f3 fw2 lh-title-ns lh-copy ph3">Building thoughtful products, one honest conversation at a time.</h1>
       </div>
       <div class="cf pl3-l pt1-ns pb3-ns pt0">
