adding margin bottom for smaller screen size

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <body class="bit-sans background">
     <! –– Notebook paper ––>
-    <main class="show slideup flex mt3 mv4-ns ml6-l mh2 mh3-m br4 bg-white mw7">
+    <main class="show slideup flex mt3 mb5 mv4-ns ml6-l mh2 mh3-m br4 bg-white mw7">
       <! –– Hole punches on the left. Only for large and medium screens. ––>
       <div class="h-auto fl hole-bar br bw1 b--moon-gray dn db-ns">
         <div class="h-100 center flex flex-column justify-between">
