replacing resume with image

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="bb bw1 b--moon-gray">
           <div class="flex justify-between   ph4 pv1">
             <h1 class="f2-ns f3">kim.json</h1>
-            <h1 class="f2-ns f3"><a href="/src/img/Jason-Kim_RESUME.pdf" class="black dim underline">resume ↗</a></h1>
+            <img class="face" src="/src/favicons/apple-touch.icon.png"></img>
           </div>
         </div>
 
