fix vertial alignment of image

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <! –– Nav Links ––>
         <div class="bb bw1 b--moon-gray">
-          <div class="flex justify-between   ph4 pv1">
+          <div class="flex justify-between items-center ph4 pv1">
             <h1 class="f2-ns f3">kim.json</h1>
             <img class="face" src="/src/favicons/apple-touch.icon.png"></img>
           </div>
