moment link not working for some reason

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="bb bw1 b--moon-gray">
             <div class="flex justify-between items-center  ph4 pv1
             ">
-              <h1 class="f2-ns f3"><a href="https://www.momentdesign.com/" class="black dim underline">Moment ↗</a></h1>
+              <h1 class="f2-ns f3"><a href="http://www.momentdesign.com/" class="black dim underline">Moment ↗</a></h1>
               <h1 class="bit-serif f3-ns f4">2017</h1>
             </div>
         </div>
