fixing sidebar spacing for mobile

--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
     <! –– Notebook paper ––>
     <main class="show slideup flex mt3 mb5 mv4-ns ml6-l mh2 mh3-m br4 bg-white mw7">
       <! –– Hole punches on the left. Only for large and medium screens. ––>
-      <div class="h-auto fl hole-bar br bw1 b--moon-gray dn db-ns">
-        <div class="h-100 center flex flex-column justify-between">
-          <div class="hole background mt5 center"></div>
-          <div class="hole background center"></div>
-          <div class="hole background mb5 center"></div>
-        </div>
+      <div class="center flex-ns flex-column justify-between hole-bar br bw1 b--moon-gray dn">
+        <div class="hole background mt5 center"></div>
+        <div class="hole background center"></div>
+        <div class="hole background mb5 center"></div>
       </div>
 
       <! –– Content Section ––>
-      <div class="flex flex-column fl w-100">
+      <div class="flex flex-column w-100">
 
         <! –– Hole punches on top. For small screens only. ––>
         <div class="bb bw1 b--moon-gray dn-ns">
