--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               Jason Kim
             </div>
             <h1 class="f2-ns f3 lh-solid">
-              Senior Product Designer at <a href="https://www.hypr.com/" class="black dim underline">HYPR</a>
+              Product Designer at <a href="https://www.pilot.com/" class="black dim underline">Pilot</a>
             </h1>
           </div>
         </div>
@@ -106,13 +106,22 @@
             </h1>
           </div>
         </div>
-
+      
+        <! –– Pilot ––>
+        <div class="bb bw1 b--moon-gray">
+          <div class="flex justify-between items-center  ph4 pv1
+          ">
+            <h1 class="f2-ns f3"><a href="https://www.pilot.com/" class="black dim underline">Pilot ↗</a></h1>
+            <h1 class="bit-serif f3-ns f4">2022 — Present</h1>
+          </div>
+        </div>
+      
         <! –– HYPR ––>
         <div class="bb bw1 b--moon-gray">
           <div class="flex justify-between items-center  ph4 pv1
           ">
             <h1 class="f2-ns f3"><a href="https://www.hypr.com/" class="black dim underline">HYPR ↗</a></h1>
-            <h1 class="bit-serif f3-ns f4">2021 — Present</h1>
+            <h1 class="bit-serif f3-ns f4">2021 — 2022</h1>
           </div>
         </div>
 
