Update job title

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               Jason Kim
             </div>
             <h1 class="f2-ns f3 lh-solid">
-              Product Designer at <a href="https://www.pilot.com/" class="black dim underline">Pilot</a>
+              Senior Product Designer at <a href="https://www.pilot.com/" class="black dim underline">Pilot</a>
             </h1>
           </div>
         </div>
