Update portfolio link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="bb bw1 b--moon-gray">
           <div class="flex justify-between items-center ph4 pv1">
             <h1 class="f2-ns f3">kim.json</h1>
-            <h1 class="f2-ns f3 underline"><a href="https://crypto.figmatic.com/prototype/kzokm0bg31992/M3rGJSz13DTAQ6Cm8eW8acWMgEk1" class="black dim underline">portfolio ↗</a></h1>
+            <h1 class="f2-ns f3 underline"><a href="https://jasonkim.xyz/portfolio" class="black dim underline">portfolio ↗</a></h1>
           </div>
         </div>
 
